--- a/Technology/index.html
+++ b/Technology/index.html
@@ -32,7 +32,7 @@
   <div class="container px-5 py-24 mx-auto">
     <div class="flex flex-wrap -m-4">
       <div class="p-4 md:w-1/3">
-        <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
+        <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden bg-opacity-25 backdrop-blur">
           <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="https://dummyimage.com/720x400" alt="blog">
           <div class="p-6">
             <h2 class="tracking-widest text-xs title-font font-medium text-gray-400 mb-1">CATEGORY</h2>
@@ -50,7 +50,7 @@
         </div>
       </div>
       <div class="p-4 md:w-1/3">
-        <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
+        <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden bg-opacity-25 backdrop-blur">
           <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="https://dummyimage.com/721x401" alt="blog">
           <div class="p-6">
             <h2 class="tracking-widest text-xs title-font font-medium text-gray-400 mb-1">CATEGORY</h2>
@@ -68,7 +68,7 @@
         </div>
       </div>
       <div class="p-4 md:w-1/3">
-        <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
+        <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden bg-opacity-25 backdrop-blur">
           <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="https://dummyimage.com/722x402" alt="blog">
           <div class="p-6">
             <h2 class="tracking-widest text-xs title-font font-medium text-gray-400 mb-1">CATEGORY</h2>
