--- a/Space/index.html
+++ b/Space/index.html
@@ -35,8 +35,8 @@
         <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden bg-opacity-25 backdrop-blur">
           <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="https://dummyimage.com/720x400" alt="blog">
           <div class="p-6">
-            <h2 class="tracking-widest text-xs title-font font-medium text-gray-400 mb-1">CATEGORY</h2>
-            <h1 class="title-font text-lg font-medium text-gray-900 mb-3">The Catalyzer</h1>
+            <h2 class="tracking-widest text-xs title-font font-medium text-whte mb-1">CATEGORY</h2>
+            <h1 class="title-font text-lg font-medium text-white mb-3">The Catalyzer</h1>
             <p class="leading-relaxed mb-3">Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.</p>
             <div class="flex items-center flex-wrap ">
               <a class="text-indigo-500 inline-flex items-center md:mb-2 lg:mb-0">Learn More
@@ -53,8 +53,8 @@
         <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden bg-opacity-25 backdrop-blur">
           <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="https://dummyimage.com/721x401" alt="blog">
           <div class="p-6">
-            <h2 class="tracking-widest text-xs title-font font-medium text-gray-400 mb-1">CATEGORY</h2>
-            <h1 class="title-font text-lg font-medium text-gray-900 mb-3">The 400 Blows</h1>
+            <h2 class="tracking-widest text-xs title-font font-medium text-white mb-1">CATEGORY</h2>
+            <h1 class="title-font text-lg font-medium text-white mb-3">The 400 Blows</h1>
             <p class="leading-relaxed mb-3">Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.</p>
             <div class="flex items-center flex-wrap">
               <a class="text-indigo-500 inline-flex items-center md:mb-2 lg:mb-0">Learn More
@@ -71,8 +71,8 @@
         <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden bg-opacity-25 backdrop-blur">
           <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="https://dummyimage.com/722x402" alt="blog">
           <div class="p-6">
-            <h2 class="tracking-widest text-xs title-font font-medium text-gray-400 mb-1">CATEGORY</h2>
-            <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Shooting Stars</h1>
+            <h2 class="tracking-widest text-xs title-font font-medium text-white mb-1">CATEGORY</h2>
+            <h1 class="title-font text-lg font-medium text-white mb-3">Shooting Stars</h1>
             <p class="leading-relaxed mb-3">Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.</p>
             <div class="flex items-center flex-wrap ">
               <a class="text-indigo-500 inline-flex items-center md:mb-2 lg:mb-0">Learn More
