--- a/Space/index.html
+++ b/Space/index.html
@@ -37,13 +37,13 @@
           <div class="p-6">
             <h2 class="tracking-widest text-xs title-font font-medium text-whte mb-1">CATEGORY</h2>
             <h1 class="title-font text-lg font-medium text-white mb-3">The Catalyzer</h1>
-            <p class="leading-relaxed mb-3">Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.</p>
+            <p class="text-white mb-3">Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.</p>
             <div class="flex items-center flex-wrap ">
               <a class="inline-flex items-center">
           <img alt="blog" src="https://dummyimage.com/104x104" class="w-12 h-12 rounded-full flex-shrink-0 object-cover object-center">
           <span class="flex-grow flex flex-col pl-4">
-            <span class="title-font font-medium text-gray-900">Holden Caulfield</span>
-            <span class="text-gray-400 text-xs tracking-widest mt-0.5">UI DEVELOPER</span>
+            <span class="title-font font-medium text-white">Holden Caulfield</span>
+            <span class="text-white text-xs tracking-widest mt-0.5">UI DEVELOPER</span>
           </span>
         </a>
             </div>
@@ -56,13 +56,13 @@
           <div class="p-6">
             <h2 class="tracking-widest text-xs title-font font-medium text-white mb-1">CATEGORY</h2>
             <h1 class="title-font text-lg font-medium text-white mb-3">The 400 Blows</h1>
-            <p class="leading-relaxed mb-3">Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.</p>
+            <p class="text-white mb-3">Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.</p>
             <div class="flex items-center flex-wrap">
               <a class="inline-flex items-center">
           <img alt="blog" src="https://dummyimage.com/104x104" class="w-12 h-12 rounded-full flex-shrink-0 object-cover object-center">
           <span class="flex-grow flex flex-col pl-4">
-            <span class="title-font font-medium text-gray-900">Holden Caulfield</span>
-            <span class="text-gray-400 text-xs tracking-widest mt-0.5">UI DEVELOPER</span>
+            <span class="title-font font-medium text-white">Holden Caulfield</span>
+            <span class="text-white text-xs tracking-widest mt-0.5">UI DEVELOPER</span>
           </span>
         </a>
             </div>
@@ -75,13 +75,13 @@
           <div class="p-6">
             <h2 class="tracking-widest text-xs title-font font-medium text-white mb-1">CATEGORY</h2>
             <h1 class="title-font text-lg font-medium text-white mb-3">Shooting Stars</h1>
-            <p class="leading-relaxed mb-3">Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.</p>
+            <p class="white mb-3">Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.</p>
             <div class="flex items-center flex-wrap ">
               <a class="inline-flex items-center">
           <img alt="blog" src="https://dummyimage.com/104x104" class="w-12 h-12 rounded-full flex-shrink-0 object-cover object-center">
           <span class="flex-grow flex flex-col pl-4">
-            <span class="title-font font-medium text-gray-900">Holden Caulfield</span>
-            <span class="text-gray-400 text-xs tracking-widest mt-0.5">UI DEVELOPER</span>
+            <span class="title-font font-medium text-white">Holden Caulfield</span>
+            <span class="text-white text-xs tracking-widest mt-0.5">UI DEVELOPER</span>
           </span>
         </a>
             </div>
