--- a/Space/index.html
+++ b/Space/index.html
@@ -36,7 +36,7 @@
         <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden bg-opacity-25 backdrop-blur">
           <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="https://dummyimage.com/720x400" alt="blog">
           <div class="p-6">
-            <a href="Space/Catergories/Space.html"><h2 class="tracking-widest text-xs title-font font-medium text-whte mb-1">SPACE</h2></a>
+            <a href="Space/Catergories/Space.html"><h2 class="tracking-widest text-xs title-font font-medium text-white mb-1">SPACE</h2></a>
             <h1 class="title-font text-lg font-medium text-white mb-3">What is the Olber's Paradox or The Night Sky Paradox?</h1>
             <p class="text-white mb-3">Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.</p>
             <div class="flex items-center flex-wrap ">
